--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-Sitio en construccion, pog!
+<html><head><style>
+body {
+background-color: #101010;
+text-align: center;
+}
+
+
+.caja {
+
+    position: relative;
+    top: 230px;
+    font-family: 'Raleway', sans-serif;
+decoration 
+
+}
+
+
+
+
+
+</style><title>TGX Web - Error 404</title>
+
+</head><body>
+<div class="caja">
+<div style="color: white;font-size: 50px;">Sitio en construcción, Viva México!
+</div>
+
+
+</div>
+
+
+
+
+
+
+
+</body></html>
