--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<html><head><style>
+<html>
+<head>
+<style>
 body {
 background-color: #101010;
 text-align: center;
@@ -18,7 +20,9 @@ decoration
 
 
 
-</style><title>TGX Web - Error 404</title>
+</style>
+
+<title>The Gabloxia</title>
 
 </head><body>
 <div class="caja">
