--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<html>
-<head>
+<html><head>
 <style>
 body {
-background-color: #101010;
+ background-image: url('https://c.tenor.com/jZ-hVTLZvUwAAAAC/trash-gang-trash.gif');
+    background-size: cover;
 text-align: center;
 }
 
@@ -10,7 +10,7 @@ text-align: center;
 .caja {
 
     position: relative;
-    top: 230px;
+    top: 240px;
     font-family: 'Raleway', sans-serif;
 decoration 
 
@@ -31,6 +31,7 @@ decoration
 
 
 </div>
+
 
 
 
