--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 
     <div class="location">
         <i class="fas fa-paper-plane"></i>
-        <h2>Location</h2>
+        <h2>Ubicacion</h2>
         <h3>México, Viva Mexico!</h3>
     </div>
 
     <div class="gender">
         <i class="fas fa-mars-stroke"></i>
-        <h2>Gender</h2>
+        <h2>Genero</h2>
         <h3>Male</h3>
     </div>
 
@@ -50,7 +50,7 @@
 
     <div class="ocupacion">
         <i class="fas fa-briefcase"></i>
-        <h2>Birthday</h2>
+        <h2>Cumpleaños</h2>
         <h3>24th June 2006</h3>
     </div>
 
