--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="gender">
         <i class="fas fa-mars-stroke"></i>
         <h2>Genero</h2>
-        <h3>Male</h3>
+        <h3>Masculino</h3>
     </div>
 
 
@@ -52,7 +52,7 @@
     <div class="ocupacion">
         <i class="fas fa-briefcase"></i>
         <h2>Cumpleaños</h2>
-        <h3>24th June 2006</h3>
+        <h3>24 de Junio 2006</h3>
     </div>
 
     <div class="redes">
