--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
 
     <div class="perfil">
     <div class="container__perfil">
-        <img class="imag" src="img/ab6775700000ee858a14b17b83b3b58e22ace4c3.jpg" alt="">
+        <img class="imag" src="https://images-ext-1.discordapp.net/external/F6eh0GjJ_KWCGV1KmXUC46CQ8ns36XVEoWG_lqFHevs/%3Fsize%3D256/https/cdn.discordapp.com/avatars/852643033325371394/c784801382c40d14cb51ae194614bbf8.png" alt="">
         <h1>The Gabloxia#6666</h1>
         <i class="fas fa-circle"></i>
         <h3>Pequeño estudiante, desarollador de pequeñas cosas</h3>
+        <h3 style="
+    color: darkgray;
+    position: relative;
+    top: -10px;">Obsesionaste mi deseo, pienso en quien soy</h3>
     </div>
 
     <div>
