--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h3 style="
     color: darkgray;
     position: relative;
-    top: -10px;">Obsesionaste mi deseo, pienso en quien soy</h3>
+    top: -10px;">Te amo vicky 💗</h3>
     </div>
 
     <div>
