--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="perfil">
     <div class="container__perfil">
-        <img class="imag" src="https://images-ext-1.discordapp.net/external/F6eh0GjJ_KWCGV1KmXUC46CQ8ns36XVEoWG_lqFHevs/%3Fsize%3D256/https/cdn.discordapp.com/avatars/852643033325371394/c784801382c40d14cb51ae194614bbf8.png" alt="">
+        <img class="imag" src="https://assets.bigcartel.com/theme_images/55591859/i13101339855.gif?auto=format&fit=max&w=800" alt="">
         <h1>The Gabloxia#6666</h1>
         <i class="fas fa-circle"></i>
         <h3>Pequeño estudiante, desarollador de pequeñas cosas</h3>
