--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="perfil">
     <div class="container__perfil">
-        <img class="imag" src="https://assets.bigcartel.com/theme_images/55591859/i13101339855.gif?auto=format&fit=max&w=800" alt="">
+        <img class="imag" src="https://cdn.discordapp.com/attachments/882941526068564028/902228966075678740/unknown.png" alt="">
         <h1>The Gabloxia#6666</h1>
         <i class="fas fa-circle"></i>
         <h3>Pequeño estudiante, desarollador de pequeñas cosas</h3>
