--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en" style="
     zoom: 90%;">
 <head>
+<link rel="icon" href="https://gabloxia.xyz/img/boc.png">
+<meta name="description" content="Tan hambriento, y tan cansado, tengo que salvar mi alma">
+<meta property="og:image" content="https://gabloxia.xyz/img/boc.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
