--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" style="
-    zoom: 90%;">
+<html lang="en">
 <head>
-<link rel="icon" href="https://gabloxia.xyz/img/boc.png">
-<meta name="description" content="Tan hambriento, y tan cansado, tengo que salvar mi alma">
-<meta property="og:image" content="https://gabloxia.xyz/img/boc.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,17 +13,13 @@
 
     <div class="perfil">
     <div class="container__perfil">
-        <img class="imag" src="https://cdn.discordapp.com/attachments/882941526068564028/902228966075678740/unknown.png" alt="">
+        <img class="imag" src="img/ab6775700000ee858a14b17b83b3b58e22ace4c3.jpg" alt="">
         <h1>The Gabloxia#6666</h1>
         <i class="fas fa-circle"></i>
         <h3>Pequeño estudiante, desarollador de pequeñas cosas</h3>
-        <h3 style="
-    color: darkgray;
-    position: relative;
-    top: -10px;">Te amo más que infinito mi vickybb 🥰💗</h3>
     </div>
 
-    <div>
+    <div class="online1">
         <h2>Online</h2>
     </div>
 </div>
@@ -37,16 +29,18 @@
         <h2>Informacion mia para que sepas mas sobre mi</h2>
     </div>
 
+
+    <div class="redess">
     <div class="location">
         <i class="fas fa-paper-plane"></i>
-        <h2>Ubicacion</h2>
+        <h2>Location</h2>
         <h3>México, Viva Mexico!</h3>
     </div>
 
     <div class="gender">
         <i class="fas fa-mars-stroke"></i>
-        <h2>Genero</h2>
-        <h3>Masculino</h3>
+        <h2>Gender</h2>
+        <h3>Male</h3>
     </div>
 
 
@@ -58,9 +52,11 @@
 
     <div class="ocupacion">
         <i class="fas fa-briefcase"></i>
-        <h2>Cumpleaños</h2>
-        <h3>24 de Junio 2006</h3>
+        <h2>Birthday</h2>
+        <h3>24th June 2006</h3>
     </div>
+
+</div>
 
     <div class="redes">
 
@@ -69,6 +65,8 @@
         <h2>Sigueme y Contactame</h2>
     </div>
 
+
+    <div class="redes1">
     <div class="discord">
         <i class="fab fa-discord"></i>
         <h1><a href="https://discord.com/users/852643033325371394/">Discord</a></h1>
@@ -98,6 +96,7 @@
         <img src="img/roblox_icon_by_ironera_ddqoj4j-fullview.png" alt="">
         <h1><a href="https://www.roblox.com/users/2803658577/profile">Roblox</a></h1>
     </div>
+</div>
 
 </div>
 
