--- a/Horario.html
+++ b/Horario.html
@@ -1,3 +1,1 @@
-<object width="400" height="500" type="application/pdf" data="/cdn/Horario.pdf">
-    <p>Insert your error message here, if the PDF cannot be displayed.</p>
-</object>
+<embed src="https://gabloxia.xyz/cdn/Horario.pdf" width="500" height="375">
