--- a/Horario.html
+++ b/Horario.html
@@ -1,1 +1,1 @@
-<embed src="https://gabloxia.xyz/cdn/Horario.pdf" width="500" height="375">
+<html><head></head><body style="height: 100%; width: 100%; overflow: hidden; margin:0px; background-color: rgb(82, 86, 89);"><embed name="C7060D3478DC96567FAEA6477F7DD742" style="position:absolute; left: 0; top: 0;" width="100%" height="100%" src="https://gabloxia.xyz/cdn/Horario.pdf" type="application/pdf"></body></html>
