--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="perfil">
     <div class="container__perfil">
-        <img class="imag" src="https://cdn.discordapp.com/attachments/882941526068564028/902228966075678740/unknown.png" alt="">
+        <img class="imag" src="https://ass.tgxmx.xyz/img/y.jpg" alt="Gabloxia">
         <h1>The Gabloxia#6666</h1>
         <i class="fas fa-circle"></i>
         <h3>Pequeño estudiante, desarollador de pequeñas cosas</h3>
