--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="perfil">
     <div class="container__perfil">
-        <img class="imag" src="https://ass.tgxmx.xyz/img/y.jpg" alt="Gabloxia">
+        <img class="imag" src="https://cdn.discordapp.com/avatars/852643033325371394/5c7eefa61d3b613e63c04705c58760e6.png?" alt="Gabloxia">
         <h1>The Gabloxia#6666</h1>
         <i class="fas fa-circle"></i>
         <h3>Pequeño estudiante, desarollador de pequeñas cosas</h3>
