--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
     <div class="perfil">
     <div class="container__perfil">
-        <img class="imag" src="https://cdn.discordapp.com/avatars/852643033325371394/5c7eefa61d3b613e63c04705c58760e6.png?" alt="Gabloxia">
+        <img class="imag" src="https://cdn.discordapp.com/avatars/852643033325371394/3e7ccc27f813a428a56d50c9547f45a0.png?" alt="Gabloxia">
         <h1>The Gabloxia#6666</h1>
         <i class="fas fa-circle"></i>
         <h3>Pequeño estudiante, desarollador de pequeñas cosas</h3>
         <h3 style="
     color: darkgray;
     position: relative;
-    top: -10px;" href='https://www.attackanxiety.us/'>attackanxiety.us</h3>
+    top: -10px;">Estoy enamorado de mi vicky, te amo sin fin mi bb preciosa 🥰🤭💖</h3>
     </div>
 
     <div>
