--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="perfil">
     <div class="container__perfil">
-        <img class="imag" src="https://cdn.discordapp.com/avatars/852643033325371394/3e7ccc27f813a428a56d50c9547f45a0.png?" alt="Gabloxia">
+        <img class="imag" src="https://cdn.discordapp.com/avatars/852643033325371394/9c1930c3026cfdcfe7c77d3af0616bd5.png?size=1024" alt="Gabloxia">
         <h1>The Gabloxia#6666</h1>
         <i class="fas fa-circle"></i>
         <h3>Pequeño estudiante, desarollador de pequeñas cosas</h3>
