--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="perfil">
     <div class="container__perfil">
-        <img class="imag" src="https://cdn.discordapp.com/avatars/852643033325371394/a_ec3fffc5c1a6656246e640bcd0f5f55e.gif?size=1024" alt="Gabloxia">
+        <img class="imag" src="https://cdn.discordapp.com/attachments/882941526068564028/929886860900175922/266838796_454082522902993_7293710496616277100_n.png" alt="Gabloxia">
         <h1>The Gabloxia#6666</h1>
         <i class="fas fa-circle"></i>
         <h3>Pequeño estudiante, desarollador de pequeñas cosas</h3>
