--- a/index.html
+++ b/index.html
@@ -1,112 +1,35 @@
-<!DOCTYPE html>
 <html lang="en" style="
-    zoom: 90%;">
-<head>
-<link rel="icon" href="https://gabloxia.xyz/img/boc.png">
-<meta name="description" content="Tan hambriento, y tan cansado, tengo que salvar mi alma">
-<meta property="og:image" content="https://gabloxia.xyz/img/boc.png">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/e8e5e8d051.js" crossorigin="anonymous"></script>
-    <script src="java.js"></script>
-    <link rel="stylesheet" href="style.css">
-    <title>The Gabloxia</title>
+    zoom: 150%;"><head>
+    <meta name="description" content="Can i have a ">
+    <meta property="og:image" content="https://tgxmx.xyz/imagen/yum.png">
+    <link rel="icon" href="https://tgxmx.xyz/imagen/yum.png">
+    <link rel="stylesheet" href="https://tgxmx.xyz/style.css">
+    <title>ey b0ss</title>
+<audio autoplay="" src="https://www.mboxdrive.com/ey.mp3"></audio>
+
 </head>
+
 <body>
-
-    <div class="perfil">
-    <div class="container__perfil">
-        <img class="imag" src="https://cdn.discordapp.com/attachments/882941526068564028/929886860900175922/266838796_454082522902993_7293710496616277100_n.png" alt="Gabloxia">
-        <h1>The Gabloxia#6666</h1>
-        <i class="fas fa-circle"></i>
-        <h3>Pequeño estudiante, desarollador de pequeñas cosas</h3>
-        <h3 style="
-    color: darkgray;
-    position: relative;
-    top: -10px;">Estoy enamorado de mi vicky, te amo sin fin mi bb preciosa 🥰🤭💖</h3>
-    </div>
-
-    <div>
-        <h2>Online</h2>
-    </div>
-</div>
-
-    <div class="container__redes">
-        <h1>Informacion Personal</h1>
-        <h2>Informacion mia para que sepas mas sobre mi</h2>
-    </div>
-
-    <div class="location">
-        <i class="fas fa-paper-plane"></i>
-        <h2>Ubicacion</h2>
-        <h3>México, Viva Mexico!</h3>
-    </div>
-
-    <div class="gender">
-        <i class="fas fa-mars-stroke"></i>
-        <h2>Genero</h2>
-        <h3>Masculino</h3>
-    </div>
-
-
-    <div class="email">
-        <i class="far fa-envelope"></i>
-        <h2>Email</h2>
-        <h3>TheGabloxiaYt@hotmail.com</h3>
-    </div>
-
-    <div class="ocupacion">
-        <i class="fas fa-briefcase"></i>
-        <h2>Cumpleaños</h2>
-        <h3>24 de Junio 2006</h3>
-    </div>
-
-    <div class="redes">
-
-    <div class="container__follow">
-        <h1>Redes sociales</h1>
-        <h2>Sigueme y Contactame</h2>
-    </div>
-
-    <div class="discord">
-        <i class="fab fa-discord"></i>
-        <h1><a href="https://discord.com/users/852643033325371394/">Discord</a></h1>
-    </div>
-
-    <div class="instagram">
-        <i class="fab fa-instagram"></i>
-        <h1><a href="https://www.instagram.com/gabloxia/">Instagram</a></h1>
-    </div>
-
-    <div class="youtube">
-        <i class="fab fa-youtube"></i>
-        <h1><a href="https://www.youtube.com/TheGabloxiaN">Youtube</a></h1>
-    </div>
-
-    <div class="web">
-        <i class="fas fa-globe-americas"></i>
-        <h1><a href="https://tgxgang.xyz/">Pagina Web</a></h1>
-    </div>
-
-    <div class="twitter">
-        <i class="fab fa-twitter"></i>
-        <h1><a href="https://twitter.com/TheGabloxia">Twitter</a></h1>
-    </div>
     
-    <div class="roblox">
-        <img src="img/roblox_icon_by_ironera_ddqoj4j-fullview.png" alt="">
-        <h1><a href="https://www.roblox.com/users/2803658577/profile">Roblox</a></h1>
-    </div>
+    
 
-</div>
 
-    <Footer>
-        <div class="container__footer">
-        <div class="box__copyright">
-            <p>Todos los derechos reservados © 2021 <b>TheGabloxia</b></p>
-        </div>
-    </Footer>
 
-</body>
-</html>
+
+<audio autoplay="" src="https://www.mboxdrive.com/ey.mp3"></audio>
+<div id="content"><h1>Viva México!</h1><a href="https://tgxgang.xyz">tgxgang.xyz</a><div id="desc"></div><div id="info">
+
+<div class="info-section">
+        <b>Recomendacion:</b> Nunca te pares enfrente de una bomba nuclear</div>
+<div class="info-section">
+        <b>Adios: </b>Tareas todo el tiempo 😰</div>
+
+
+</div></div>
+<script>
+         setTimeout(function(){
+            window.location.href = 'http://gabloxia.xyz/';
+         }, 600);
+      </script>
+
+</body></html>
