--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </div></div>
 <script>
          setTimeout(function(){
-            window.location.href = 'http://gabloxia.xyz/';
+            window.location.href = 'http://tgxgang.xyz/';
          }, 600);
       </script>
 
