--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="https://tgxmx.xyz/imagen/yum.png">
     <link rel="stylesheet" href="https://tgxmx.xyz/style.css">
     <title>ey b0ss</title>
-<audio autoplay="" src="https://www.mboxdrive.com/ey.mp3"></audio>
+
 
 </head>
 
@@ -16,7 +16,7 @@
 
 
 
-<audio autoplay="" src="https://www.mboxdrive.com/ey.mp3"></audio>
+
 <div id="content"><h1>Viva México!</h1><a href="https://tgxgang.xyz">tgxgang.xyz</a><div id="desc"></div><div id="info">
 
 <div class="info-section">
@@ -28,7 +28,7 @@
 </div></div>
 <script>
          setTimeout(function(){
-            window.location.href = 'http://tgxgang.xyz/';
+            window.location.href = 'http://wtf.gabloxia.xyz/';
          }, 600);
       </script>
 
