--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta property="og:image" content="https://tgxmx.xyz/imagen/yum.png">
     <link rel="icon" href="https://tgxmx.xyz/imagen/yum.png">
     <link rel="stylesheet" href="https://tgxmx.xyz/style.css">
-    <title>ey b0ss</title>
+    <title>Si</title>
 
 
 </head>
@@ -17,12 +17,12 @@
 
 
 
-<div id="content"><h1>Viva México!</h1><a href="https://tgxgang.xyz">tgxgang.xyz</a><div id="desc"></div><div id="info">
+<div id="content"><h1>Gabloxia.xyz</h1><a href="https://tgxgang.xyz">tgxgang.xyz</a><div id="desc"></div><div id="info">
 
 <div class="info-section">
-        <b>Recomendacion:</b> Nunca te pares enfrente de una bomba nuclear</div>
+        <b>Ideologia: </b> Nazi</div>
 <div class="info-section">
-        <b>Adios: </b>Tareas todo el tiempo 😰</div>
+        <b>Adios: </b>Drain</div>
 
 
 </div></div>
