--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div id="content"><h1>Gabloxia.xyz</h1><a href="https://tgxgang.xyz">tgxgang.xyz</a><div id="desc"></div><div id="info">
 
 <div class="info-section">
-        <b>Ideologia: </b> Nazi</div>
+        <b>Partido Politico: </b> The Gabloxia Gang - Moonrock</div>
 <div class="info-section">
         <b>Adios: </b>Drain</div>
 
